--- a/CanvasDemo/Base.lproj/Main.storyboard
+++ b/CanvasDemo/Base.lproj/Main.storyboard
@@ -24,22 +24,42 @@
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="dead" translatesAutoresizingMaskIntoConstraints="NO" id="uLc-m3-glF">
                                         <rect key="frame" x="33" y="34" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="ud9-gL-Fh0" appends="YES" id="0Ai-QJ-hll"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="happy" translatesAutoresizingMaskIntoConstraints="NO" id="a6k-5i-J5Y">
                                         <rect key="frame" x="292" y="34" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="t9b-YB-GgR" appends="YES" id="46t-ZS-wN7"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="sad" translatesAutoresizingMaskIntoConstraints="NO" id="UCJ-FL-3Dp">
                                         <rect key="frame" x="33" y="126" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="QSz-b9-E9c" appends="YES" id="O1P-8b-9kF"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="wink" translatesAutoresizingMaskIntoConstraints="NO" id="2XL-CS-uAu">
                                         <rect key="frame" x="292" y="126" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="2mO-AW-M6l" appends="YES" id="bqr-jT-xE8"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="tongue" translatesAutoresizingMaskIntoConstraints="NO" id="KOv-bD-Ozm">
                                         <rect key="frame" x="157" y="126" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="eIS-k8-wqi" appends="YES" id="mLW-FR-7r1"/>
+                                        </connections>
                                     </imageView>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="down_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="euB-hO-9el">
                                         <rect key="frame" x="177" y="0.0" width="20" height="14"/>
@@ -48,6 +68,10 @@
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="excited" translatesAutoresizingMaskIntoConstraints="NO" id="6zY-kC-sKP">
                                         <rect key="frame" x="157" y="34" width="60" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="gpa-VX-SFa" appends="YES" id="guc-vc-c9I"/>
+                                        </connections>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="1" blue="0.18424689620000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -74,6 +98,36 @@
                 <panGestureRecognizer minimumNumberOfTouches="1" id="JET-3o-lge">
                     <connections>
                         <action selector="didPanTray:" destination="BYZ-38-t0r" id="Xy9-X9-qw4"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="t9b-YB-GgR">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="oQ7-E6-kXZ"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="ud9-gL-Fh0">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="xtV-IX-H9t"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="gpa-VX-SFa">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="Zxi-cA-ep4"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="QSz-b9-E9c">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="Zaz-PR-nHp"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="eIS-k8-wqi">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="Ghm-Fn-x50"/>
+                    </connections>
+                </panGestureRecognizer>
+                <panGestureRecognizer minimumNumberOfTouches="1" id="2mO-AW-M6l">
+                    <connections>
+                        <action selector="didPanFace:" destination="BYZ-38-t0r" id="kvz-ai-w93"/>
                     </connections>
                 </panGestureRecognizer>
             </objects>
